--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 { "name" : "formidable"
-, "version": "0.1.0"
+, "version": "0.2.0"
+, "dependencies": {"gently": ">=0.4.0"}
 , "directories" : { "lib" : "./lib/formidable" }
 , "main" : "./lib/formidable/index"
 }
