--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-{ "name" : "formidable"
-, "version": "0.9.8"
-, "dependencies": {"gently": ">=0.7.0"}
-, "directories" : { "lib" : "./lib/formidable" }
-, "main" : "./lib/formidable/index"
+{ "name" : "formidable",
+  "version": "0.9.8",
+  "dependencies": {"gently": ">=0.7.0"},
+  "directories" : { "lib" : "./lib/formidable" },
+  "main" : "./lib/formidable/index",
 }
