--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "gently": ">=0.7.0"
   },
   "directories": {
-    "lib": "./lib/formidable"
+    "lib": "./lib"
   },
-  "main": "./lib/formidable/index",
+  "main": "./lib/index",
   "engines": {
     "node": "*"
   }
