--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formidable",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "dependencies": {
     "gently": ">=0.7.0"
   },
@@ -10,5 +10,6 @@
   "main": "./lib/index",
   "engines": {
     "node": "*"
-  }
+  },
+  "devDependencies": {}
 }
