--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.2",
   "dependencies": {},
   "devDependencies": {
-    "gently": ">=0.7.0"
+    "gently": ">=0.7.0",
+    "far": "0.0.7"
   },
   "directories": {
     "lib": "./lib"
