--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "dependencies": {},
   "devDependencies": {
-    "gently": ">=0.7.0",
+    "gently": "0.8.0",
     "far": "0.0.7",
     "fast-or-slow": "0.0.5"
   },
