--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "dependencies": {},
   "devDependencies": {
     "gently": "0.8.0",
-    "fast-or-slow": "0.0.5",
     "findit": "0.1.1",
     "hashish": "0.0.4",
-    "urun": "0.0.4"
+    "urun": "0.0.4",
+    "utest": "0.0.3"
   },
   "directories": {
     "lib": "./lib"
