--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "make test"
   },
   "engines": {
-    "node": "*"
+    "node": ">=0.8.0 <0.10.0"
   },
   "repository": {
     "type": "git",
