--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "formidable",
+  "description": "A node.js module for parsing form data, especially file uploads.",
   "version": "1.0.11",
   "dependencies": {},
   "devDependencies": {
@@ -23,6 +24,9 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/felixge/node-formidable.git"
+  },
+  "bugs": {
+    "url": "http://github.com/felixge/node-formidable/issues"
   },
   "optionalDependencies": {}
 }
