--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "engines": {
     "node": ">=0.8.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "readable-stream": "~1.0.2"
+  }
 }
