--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "hashish": "0.0.4",
     "mocha": "~1.8.2",
     "request": "~2.16.6",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "superagent": "~0.14.1"
   },
   "main": "./lib/incoming_form.js",
   "scripts": {
