--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "multiparty",
   "version": "2.1.6",
   "description": "multipart/form-data parser which supports streaming",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:superjoe30/node-multiparty.git"
+  },
   "keywords": [
     "file",
     "upload",
