update readable-stream dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mocha": "~1.8.2",
     "request": "~2.16.6",
     "mkdirp": "~0.3.5",
-    "superagent": "~0.14.1"
+    "superagent": "~0.14.1",
+    "graceful-fs": "~2.0.1"
   },
   "scripts": {
     "test": "mocha --reporter spec --recursive test/test.js"
@@ -29,7 +30,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "readable-stream": "~1.0.2",
-    "stream-counter": "~0.1.0"
+    "readable-stream": "~1.1.9",
+    "stream-counter": "~0.2.0"
   }
 }
