--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "s3"
   ],
   "devDependencies": {
-    "findit": "~2.0.0",
     "mkdirp": "~0.5.0",
-    "pend": "~1.1.1",
+    "pend": "~1.1.3",
     "rimraf": "~2.2.8",
-    "superagent": "~0.20.0"
+    "superagent": "~0.20.0",
+    "findit2": "~2.2.2"
   },
   "scripts": {
     "test": "node test/test.js"
