--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "s3"
   ],
   "devDependencies": {
+    "findit2": "~2.2.3",
     "mkdirp": "~0.5.0",
-    "pend": "~1.1.3",
+    "pend": "~1.2.0",
     "rimraf": "~2.2.8",
-    "superagent": "~0.20.0",
-    "findit2": "~2.2.3"
+    "superagent": "~0.21.0"
   },
   "scripts": {
     "test": "node test/test.js"
