--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   ],
   "devDependencies": {
     "findit2": "~2.2.3",
+    "istanbul": "~0.3.4",
     "mkdirp": "~0.5.0",
     "pend": "~1.2.0",
     "rimraf": "~2.2.8",
     "superagent": "~0.21.0"
   },
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test/test.js",
+    "test-cov": "istanbul cover test/test.js",
+    "test-travis": "istanbul cover test/test.js --report lcovonly"
   },
   "engines": {
     "node": ">=0.10.0"
