--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "formidable",
   "description": "A node.js module for parsing form data, especially file uploads.",
-  "homepage": "https://github.com/felixge/node-formidable",
-  "version": "1.0.14",
+  "homepage": "https://github.com/makcbrain/node-formidable",
+  "version": "1.0.15",
   "devDependencies": {
     "gently": "0.8.0",
     "findit": "0.1.1",
@@ -24,10 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/felixge/node-formidable.git"
-  },
-  "bugs": {
-    "url": "http://github.com/felixge/node-formidable/issues"
+    "url": "https://github.com/makcbrain/node-formidable"
   },
   "optionalDependencies": {}
 }
