Add license to package.json

--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
   "bugs": {
     "url": "http://github.com/felixge/node-formidable/issues"
   },
-  "optionalDependencies": {}
+  "optionalDependencies": {},
+  "license": "MIT"
 }
