Remove duplicate license field from package.json

--- a/package.json
+++ b/package.json
@@ -30,6 +30,5 @@
   "bugs": {
     "url": "http://github.com/felixge/node-formidable/issues"
   },
-  "optionalDependencies": {},
-  "license": "MIT"
+  "optionalDependencies": {}
 }
