--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "pretest": "yarn run cleanup",
     "test": "mkdir test/tmp && node test/run.js",
-    "cleanup": "rm test/tmp/*"
+    "cleanup": "rm -rf test/tmp"
   },
   "repository": "node-formidable/node-formidable",
   "bugs": {
