chore: merge with latest master
Signed-off-by: Charlike Mike Reagent <opensource@tunnckocore.com>

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "utest": "^0.0.8",
     "request": "^2.11.4"
   },
-  "directories": {
-    "lib": "./lib"
-  },
-  "main": "./lib/index",
+  "main": "./src/index.js",
+  "files": [
+    "src"
+  ],
   "scripts": {
     "pretest": "yarn run cleanup",
     "test": "mkdir test/tmp && node test/run.js",
@@ -24,7 +24,5 @@
   "bugs": {
     "url": "http://github.com/node-formidable/node-formidable/issues"
   },
-  "funding": {
-    "url": "https://ko-fi.com/tunnckoCore/commissions"
-  }
+  "funding": "https://ko-fi.com/tunnckoCore/commissions"
 }
