fix: make tests fully passing; update benchmark and examples
Signed-off-by: Charlike Mike Reagent <opensource@tunnckocore.com>

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,7 +3,14 @@ LICENSE
 LICENSE.md
 LICENSE*.md
 dist
-# fixture
+
+*.txt
+test/tmp
+test/fixture/http
+test/fixture/file
+test/fixture/multi*
+test/tools
+
 # fixtures
 # __fixture__
 # __fixtures__
