--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "scripts": {
     "cleanup": "rm -rf test/tmp",
+    "fmt": "prettier '**/*.{md,js,json}' --write",
     "lint": "eslint . --cache --fix --quiet --format codeframe",
-    "pretest": "yarn run cleanup",
-    "test": "mkdir test/tmp && node test/run.js"
+    "pretest": "yarn run cleanup && mkdir test/tmp",
+    "test": "node test/run.js",
+    "pretest:ci": "yarn pretest",
+    "test:ci": "nyc node test/run.js"
   },
   "devDependencies": {
     "@tunnckocore/prettier-config": "^1.2.0",
@@ -27,6 +30,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "prettier-plugin-pkgjson": "^0.2.0",
     "request": "^2.88.0",
