chore: gh actions skip ci commits for all-contrib
Signed-off-by: Charlike Mike Reagent <opensource@tunnckocore.com>

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,9 +4,17 @@ on:
   pull_request:
     branches:
       - master
+    commits:
+      - '*'
+      - '!ci skip'
+      - '!skip ci'
   push:
     branches:
       - master
+    commits:
+      - '*'
+      - '!ci skip'
+      - '!skip ci'
 
 jobs:
   test:
