docs: update @tunnckoCore as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -32,7 +32,13 @@
       "contributions": [
         "bug",
         "infra",
-        "design"
+        "design",
+        "code",
+        "doc",
+        "example",
+        "ideas",
+        "maintenance",
+        "test"
       ]
     },
     {
