--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -48,7 +48,9 @@
       "profile": "https://github.com/kedarv",
       "contributions": [
         "code",
-        "test"
+        "test",
+        "question",
+        "bug"
       ]
     }
   ]
