--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -52,6 +52,20 @@
         "question",
         "bug"
       ]
+    },
+    {
+      "login": "GrosSacASac",
+      "name": "Walle Cyril",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/5721194?v=4",
+      "profile": "https://github.com/GrosSacASac",
+      "contributions": [
+        "question",
+        "bug",
+        "code",
+        "financial",
+        "ideas",
+        "maintenance"
+      ]
     }
   ]
 }
