--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -78,6 +78,17 @@
         "code",
         "maintenance"
       ]
+    },
+    {
+      "login": "Amit-A",
+      "name": "Amit-A",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/7987238?v=4",
+      "profile": "https://github.com/Amit-A",
+      "contributions": [
+        "question",
+        "bug",
+        "code"
+      ]
     }
   ]
 }
