--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -159,6 +159,16 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "gabipetrovay",
+      "name": "Gabriel Petrovay",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1170398?v=4",
+      "profile": "https://github.com/gabipetrovay",
+      "contributions": [
+        "bug",
+        "code"
+      ]
     }
   ]
 }
