chore: use @tunnckocore/renovate-config
Signed-off-by: Charlike Mike Reagent <opensource@tunnckocore.com>

--- a/package.json
+++ b/package.json
@@ -63,5 +63,10 @@
     "*.{js,jsx,ts,tsx}": [
       "yarn run lint"
     ]
+  },
+  "renovate": {
+    "extends": [
+      "@tunnckocore"
+    ]
   }
 }
