--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,12 +1,12 @@
 ko_fi: tunnckoCore
 patreon: tunnckoCore
+tidelift: npm/formidable # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 
 # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
 custom:
   - https://gumroad.com/l/tunnckoCoreRecurringDonation
 # github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 #open_collective: # Replace with a single Open Collective username
-#tidelift: npm/formidable # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 #community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 #liberapay: # Replace with a single Liberapay username
 #issuehunt: # Replace with a single IssueHunt username
