--- a/package.json
+++ b/package.json
@@ -29,26 +29,26 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@tunnckocore/prettier-config": "^1.2.0",
+    "@tunnckocore/prettier-config": "^1.3.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.2.1",
+    "husky": "^4.2.2",
     "jest": "^25.1.0",
-    "lint-staged": "^10.0.6",
+    "lint-staged": "^10.0.7",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
-    "prettier-plugin-pkgjson": "^0.2.0",
-    "request": "^2.88.0",
+    "prettier-plugin-pkgjson": "^0.2.3",
+    "request": "^2.88.2",
     "urun": "^0.0.8",
     "utest": "^0.0.8"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "git status --porcelain && lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "pre-commit": "git status --porcelain && yarn lint-staged",
+      "commit-msg": "yarn commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "commitlint": {
