--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.2",
     "jest": "^25.1.0",
+    "koa": "^2.11.0",
     "lint-staged": "^10.0.7",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "prettier-plugin-pkgjson": "^0.2.3",
     "request": "^2.88.2",
+    "supertest": "^4.0.2",
     "urun": "^0.0.8",
     "utest": "^0.0.8"
   },
