feat: introduce Plugins API, fix tests (#545)
* feat: introduce Plugins API, fix tests
* chore: update changelog
* chore: lgtm tweaks?
* start plugins tests; update exports
* chore(custom-plugins-tests): make it really passing
* chore: more tests; add nyc test coverage
* chore: move to GitHub Actions CI
* fix: respect form hash option on incoming octect/stream requests

close #407

* fix: tests, use dezalgo and once for parse callback

- it is recommended plugins to return the this/self/formidable instance
- add 2 deps: `once` and `dezalgo` for ensurance of the `cb` param of .parse()
  + otherwise it COULD (and happened already few times) be called multiple times
- update unit tests to use Jest

* chore: tweaks, publish `dev` dist-tag (with Plugins API)
* chore: sync & tweak
* fix: check strictly for multipart/form-data in multipart parser
* chore: publish dev.2
* fix: tests updates
* fix: it seems we support multipart/related too
* chore: download badges
* Update package.json
* chore: sync

Signed-off-by: Charlike Mike Reagent <opensource@tunnckocore.com>
Co-authored-by: Claudio Poli <masterkain@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/node-formidable",
-  "funding": "https://ko-fi.com/tunnckoCore/commissions",
+  "funding": "https://tidelift.com/funding/github/npm/formidable",
   "repository": "node-formidable/node-formidable",
   "main": "./src/index.js",
   "files": [
-    "src"
+    "src",
+    "test"
   ],
   "publishConfig": {
     "access": "public",
@@ -26,6 +27,10 @@
     "pretest:ci": "yarn pretest",
     "test:ci": "nyc node test/run.js"
   },
+  "dependencies": {
+    "dezalgo": "^1.0.3",
+    "once": "^1.4.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
@@ -37,11 +42,13 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.2",
     "jest": "^25.1.0",
+    "koa": "^2.11.0",
     "lint-staged": "^10.0.7",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "prettier-plugin-pkgjson": "^0.2.3",
     "request": "^2.88.2",
+    "supertest": "^4.0.2",
     "urun": "^0.0.8",
     "utest": "^0.0.8"
   },
