--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,17 +8,17 @@ on:
     branches:
       - master
 
-modules_cache: &modules_cache
-  uses: actions/cache@v2
-  id: nodejs-cache
-  name: Cache node modules
-  with:
-    path: node_modules
-    key: ${{ matrix.os }}-nodejs-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
-    restore-keys: |
-      ${{ matrix.os }}-nodejs-${{ matrix.node }}-
-      ${{ matrix.os }}-nodejs-
-      ${{ matrix.os }}-
+# Add to every job
+# - uses: actions/cache@v1
+#   id: nodejs-cache
+#   name: Cache node modules
+#   with:
+#     path: node_modules
+#     key: ${{ matrix.os }}-nodejs-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
+#     restore-keys: |
+#       ${{ matrix.os }}-nodejs-${{ matrix.node }}-
+#       ${{ matrix.os }}-nodejs-
+#       ${{ matrix.os }}-
 
 jobs:
   lint:
@@ -31,7 +31,16 @@ jobs:
         node: [12.x]
     runs-on: ubuntu-latest
     steps:
-      - *modules_cache
+      - uses: actions/cache@v1
+        id: nodejs-cache
+        name: Cache node modules
+        with:
+          path: node_modules
+          key: ${{ matrix.os }}-nodejs-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ matrix.os }}-nodejs-${{ matrix.node }}-
+            ${{ matrix.os }}-nodejs-
+            ${{ matrix.os }}-
       - name: Installing dependencies
         if: steps.nodejs-cache.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile --check-files
@@ -49,7 +58,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       # - uses: actions/checkout@v2
-      - *modules_cache
+      - uses: actions/cache@v1
+        id: nodejs-cache
+        name: Cache node modules
+        with:
+          path: node_modules
+          key: ${{ matrix.os }}-nodejs-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ matrix.os }}-nodejs-${{ matrix.node }}-
+            ${{ matrix.os }}-nodejs-
+            ${{ matrix.os }}-
       - name: Installing dependencies
         if: steps.nodejs-cache.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile --check-files
