chore: better cross platform scripts
Signed-off-by: Charlike Mike Reagent <opensource@tunnckocore.com>

--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "fmt:prepare": "prettier --write",
     "lint": "yarn run lint:prepare .",
     "lint:prepare": "eslint --cache --fix --quiet --format codeframe",
-    "reinstall": "rm -rf node_modules yarn.lock && yarn",
-    "pretest": "rm -rf test/tmp && mkdir test/tmp",
+    "pretest": "yarn del ./test/tmp",
+    "postpretest": "yarn make-dir ./test/tmp",
+    "reinstall": "yarn del ./node_modules ./yarn.lock",
+    "postreinstall": "yarn setup",
+    "setup": "yarn",
     "test": "yarn node test/run.js",
     "pretest:ci": "yarn pretest",
     "test:ci": "nyc node test/run.js",
@@ -36,6 +39,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@tunnckocore/prettier-config": "^1.3.3",
+    "del-cli": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
@@ -46,6 +50,7 @@
     "jest": "^25.1.0",
     "koa": "^2.11.0",
     "lint-staged": "^10.0.7",
+    "make-dir-cli": "^2.0.0",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "prettier-plugin-pkgjson": "^0.2.3",
